--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="features19 cid-s8hv23NGDA" id="features19-wl">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features19 cid-s8hv23NGDA" id="features19-wl">
     
       
     <div class="container"> 
@@ -241,7 +241,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Xrm6WkZzfcex6vM0qSqnWPV8vbk4oKpme8ceTLhmu/8ZFhRBtapBCRMEkcucdXK9jS+lW8RmYJkbeUBPUH8EyjIUGDfSBax4tixcX3mfYYEkUq08j3Tk0VjkZ+9iHTUt">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cn5RVmq10AEiEzTcjqtD/j6aF/u2KbE2S4qX3WC2k8DtbWuRambyQ6Az/M1lEoFtNB+21m/Q4WWU1HnQPG7HjEjgDHxLua0H+Z2JKOiUqdOW5E+zEQTQYPebS8+lhp05">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
