--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content4 cid-s7UJ5yHxon" id="content4-w6">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-s7UJ5yHxon" id="content4-w6">
 
     
 
@@ -602,7 +602,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7becU2FoGKk/aVr0ycapNl8mEI/U/oSlNbQHMdhQr2mUgahLwVcAY3/cxq9p1SI7B3+srI8V3BnWvefukovDPr3zBZDxq7MPYvCSzE392+8E808NebK04jxPeUWbfvg4">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kwwLSTTLtQi1Qk/FnIIBjqnTiMbaIKc81M63r6Hfc5LrhG+ivsDCttlDORawuRdqPoebnXSBM7cmD6THEwggRNfu9QXw2vfqh6t2ufRkVH60dB97bVY29yJ6L2+budoi">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
