--- a/withoutsidebar.html
+++ b/withoutsidebar.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-sjYp3uy3Pm" id="content5-y9">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-sjYp3uy3Pm" id="content5-y9">
 
     
 
@@ -230,7 +230,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gBuAHdw+dKKhm1/k+rBaL7ANapLpz4K93Dd/3rjjqVJBLk30SGBT9CuMDutgyhV/fDW5gIrUTmIfJI3Q5d62d8gwAFM5o8ssxmWvjiJg8HJKI+FOuRZCSjDljtLxb/7y">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QGTSCRSIcu1dPF7s7EihsEnSwKGKen1+OKvfyv2xRnhCdy4TNJm1EBW0Z5YuSzgROwtijTaLZcQWxx39rM09Rcbrl2HQb2x6GfgMpd5TuUvTMLY7fFbo9O9It5VHalb7">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
